fix code wrap issue on ios

--- a/_sass/cadre/_code.scss
+++ b/_sass/cadre/_code.scss
@@ -61,5 +61,6 @@ pre {
   code {
     padding: 0;
     background-color: inherit;
+    word-wrap: normal;
   }
 }
